--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="settings">Settings</string>
     <string name="theme">Theme</string>
     <string name="ask_to_remove_item">Ask To Remove Item</string>
+
+    <!-- Chart -->
+    <string name="no_chart_data">There is no presentable data.</string>
 </resources>
