--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,11 @@
     <string name="no">No</string>
     <string name="okay">Okay</string>
 
-    <string name="currency_conversion">"Currency Conversion"</string>
+    <string name="currency_conversion">Currency Conversion</string>
     <string name="refresh_time">Refreshed at: %s</string>
 
     <!-- Watchlist Screen -->
-    <string name="watchlist_item_deletion_warning">"Watchlist item containing %s-%s currencies will be deleted.\nAre you sure?"</string>
+    <string name="watchlist_item_deletion_warning">Watchlist item containing %s-%s currencies will be deleted.\nAre you sure?</string>
     <string name="add_to_watchlist">Add</string>
     <string name="base_currency">Base Currency</string>
     <string name="target_currency">Target Currency</string>
@@ -17,12 +17,19 @@
 
     <!-- Dialog -->
     <string name="search_currency">Search for a currency</string>
+    <string name="error_message_unexpected_error">An unexpected error occured.</string>
 
     <!-- Settings Screen -->
     <string name="settings">Settings</string>
     <string name="theme">Theme</string>
+    <string name="theme_light">Light</string>
+    <string name="theme_dark">Dark</string>
+    <string name="theme_system">System Theme</string>
     <string name="ask_to_remove_item">Ask To Remove Item</string>
+
 
     <!-- Chart -->
     <string name="no_chart_data">There is no presentable data.</string>
+
+
 </resources>
